--- a/04-Techno-Projeto/index.html
+++ b/04-Techno-Projeto/index.html
@@ -12,7 +12,12 @@
 
 <body>
     <div id="app">
-        {{produtos}}
+        <section class="produtos">
+            <div v-for="produto in produtos" :key="produto.id" class="produto">
+                <img :src="produto.img" :alt="produto.nome" class="produto_img">
+
+            </div>
+        </section>
     </div>
     <script src="app.js"></script>
 </body>
