--- a/04-Techno-Projeto/index.html
+++ b/04-Techno-Projeto/index.html
@@ -11,11 +11,18 @@
 </head>
 
 <body>
-    <div id="app">
-        <section class="produtos">
-            <div v-for="produto in produtos" :key="produto.id" class="produto">
-                <img :src="produto.img" :alt="produto.nome" class="produto_img">
 
+<div id="app">
+    <section class="modal">
+
+    </section>
+    <section class="produtos">
+            <div v-for="item in produtos" :key="item.id" class="produto" @click="fetchProduto(item.id)">
+                <img :src="item.img" :alt="item.nome" class="produto_img">
+                <div class="produto_info">
+                    <span class="produto_preco">{{item.preco | numeroPreco}}</span>
+                    <h2 class="produto_titulo">{{item.nome}}</h2>
+                </div>
             </div>
         </section>
     </div>
