--- a/02-Vue-js_Para_Iniciantes/0201-Instancia-exerc.html
+++ b/02-Vue-js_Para_Iniciantes/0201-Instancia-exerc.html
@@ -6,17 +6,42 @@
     <script src="vue.js"></script>
 </head>
 <body>
- 
-    <div id="app1">
 
+    <div id="app">
+        {{nome}}
     </div>
-    <div id="app2">
+    
+    <div id="app1">
+        <p>{{ferramenta}} e {{ferramenta_2}}</p>
+        
+    </div>
 
+    <div id="app2">
+        {{instrumento}}
     </div>
 
 <script>
 // Crie uma tag com o id app e inicie uma instência de Vue
 // Faça o HTML abaixo funcionar com VUE
+const vm  = new Vue({
+    el:"#app",
+    data:{
+        nome: "Martelo"
+    }
+});
+const vm1 = new Vue({
+    el:"#app1",
+    data:{
+        ferramenta: "Furadeira",
+        ferramenta_2: vm.nome
+    }
+});
+const vm2 = new Vue({
+    el:"#app2",
+    data:{
+        instrumento: "Violão"
+    }
+});
 </script>
 </body>
 </html>
