--- a/02-Vue-js_Para_Iniciantes/0205-v-on-aula.html
+++ b/02-Vue-js_Para_Iniciantes/0205-v-on-aula.html
@@ -5,24 +5,24 @@
     <title>Vue</title>
     <script src="vue.js"></script>
     <style>
-        .verde{
-            background-color: green;
-        }
-        .vermelho{
-            background-color: red;
-        }
+      .verde {
+        background-color: green;
+      }
+      .vermelho {
+        background-color: red;
+      }
     </style>
   </head>
   <body>
     <div id="app">
-        <!-- <button v-on:click="handleClick">Click aqui</button> -->
-        <button @click="handleClick">Click aqui</button>
+      <!-- <button v-on:click="handleClick">Click aqui</button> -->
+      <button @click="handleClick">Click aqui</button>
     </div>
 
     <div id="app2">
-        <button @click="ativo = !ativo">Click aqui Segundo Exempli</button>
-        <p :class="ativo ? 'verde': 'vermelho'">Texto de teste</p>
-        <p v-if="ativo" >Mostra texto!</p>
+      <button @click="ativo = !ativo">Click aqui Segundo Exempli</button>
+      <p :class="ativo ? 'verde': 'vermelho'">Texto de teste</p>
+      <p v-if="ativo">Mostra texto!</p>
     </div>
 
     <div id="app3">
@@ -31,36 +31,60 @@
       <a @click.prevent.once="scrollSuave" href="#interno">Prevent ONCE</a>
     </div>
 
+    <div id="app4">
+      <br />
+      <div @mousemove="handleMousex">Mouse X: {{mouse.x}}</div>
+      <input @keyup="handleClickUp" type="text" /><br />
+      <!-- Evento dispara quando tem a letra f -->
+      <input @keyup.f="handleClickUp" type="text" /><label for="">Letra F</label
+      ><br />
+      <!-- Evento dispara quando tecla Enter -->
+      <input @keyup.enter="handleClickUp" type="text" /><label for=""
+        >Enter</label
+      ><br />
+    </div>
+
     <script>
       const vm = new Vue({
         el: "#app",
-        data:{
-
-        },
+        data: {},
         methods: {
-            handleClick(event){
-                console.log(event);
-            }
-
-        },
+          handleClick(event) {
+            console.log(event);
+          }
+        }
       });
 
       const vm2 = new Vue({
         el: "#app2",
-        data:{
-                ativo: true,
-            },
-        });
-        const vm3 = new Vue({
-          el:"#app3",
-          methods:{
-            scrollSuave(){
-              //event.preventDefault();
-              console.log("Scroll SUAVE");
-            }
+        data: {
+          ativo: true
+        }
+      });
+      const vm3 = new Vue({
+        el: "#app3",
+        methods: {
+          scrollSuave() {
+            //event.preventDefault();
+            console.log("Scroll SUAVE");
           }
-        });
+        }
+      });
 
+      const vm4 = new Vue({
+        el: "#app4",
+        data: {
+          mouse: ""
+        },
+        methods: {
+          handleClickUp(event) {
+            console.log(event);
+          },
+          handleMousex(event) {
+            this.mouse = event;
+          }
+        }
+      });
     </script>
   </body>
 </html>
