--- a/04-Techno_Projeto/index.html
+++ b/04-Techno_Projeto/index.html
@@ -70,6 +70,9 @@
             </div>
         </div>
     </section>
+    <div class="alerta" :class="{ativo: alertaAtivo}">
+        <p class="alerta_mensagem">{{mensagemAlerta}}</p>
+    </div>
 </div>
 
 <script src="app.js"></script>
