Parte 1/10 - Vue.JS

--- a/01-Vue-JS/0104-instalacao-do-vuejs.html
+++ b/01-Vue-JS/0104-instalacao-do-vuejs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="node_modules/vue/dist/vue.js"></script>
+    <script src="../lib/vue.js"></script>
     <title>Vue.js</title>
 </head>
 <body>
@@ -10,18 +10,17 @@
     {{nome}}, {{idade}}, {{faculdade.curso}}
 </div>
 <script>
-
-/*    options = {
-        el: "#app",
-        data: {
-            nome: "José",
-            idade: 35,
-            faculdade: {
-                possui: "sim",
-                curso: "Analista de sistemas"
+    /*    options = {
+            el: "#app",
+            data: {
+                nome: "José",
+                idade: 35,
+                faculdade: {
+                    possui: "sim",
+                    curso: "Analista de sistemas"
+                }
             }
-        }
-    }*/
+        }*/
 
     const vm = new Vue(
         {
